--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     ],
     "routes": [
       {
+        "src": "/static/(.*)",
+        "dest": "static $1"
+      },
+      {
         "src": "/(.*)",
         "dest": "todo_project/wsgi.py"
       }
